# EntropyVPN

./: .gitattributes  .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
.claude/: settings.local.json
android/app/: build.gradle.kts  proguard-rules.pro
dev/: prewarm-attempt.patch  spike_wintun_reuse.ps1
docs/: auto-updater-plan.md
installer/: entropy_vpn.iss
lib/: main.dart  main_connect.dart  main_constants.dart  main_flags.dart  main_helpers.dart  main_input.dart  main_pages.dart  main_settings.dart  main_settings_about.dart  main_settings_common.dart  main_settings_dns.dart  main_settings_notifications.dart  main_settings_split_tunnel.dart  main_settings_updates.dart  main_shell.dart  main_sources.dart  main_update_notification.dart
lib/l10n/: app_strings.dart
lib/models/: config_source.dart  dns_settings.dart  split_tunnel.dart  vpn_profile.dart
lib/services/: android_incoming_link_bridge.dart  android_update_notification_service.dart  (+35 more)
linux/: CMakeLists.txt  entropy_vpn.desktop
native/: CMakeLists.txt  share_link_parser.cpp  share_link_parser.h
test/: app_state_store_test.dart  app_update_service_test.dart  flag_aspect_ratio_test.dart  geo_ip_service_test.dart  profile_catalog_service_test.dart  share_link_parser_test.dart  tcp_ping_service_test.dart  vpn_controller_test.dart  widget_test.dart  xray_tun_startup_timing_test.dart
tools/: README.md  build_android_release.ps1  build_installer.ps1  build_linux_release.sh  build_release_manifest.ps1  release_exclude_globs.txt
windows/: CMakeLists.txt
(+78 files in other folders)
